- Translator now allows translating mentor advantages and disadvantages. 
- Fixed issues with condition monitor controls greater than 24 not being shown.
- Added ammobonuspercent node to vehicle mods. This allows for weapon mount mods to modify the ammunition of their attached weapons by a percentage rather than the fixed value of the ammobonus node. 

Application Fixes:
- Fixed a regression in the behaviour of essence holes incorrectly being saved as 100 times the intended value. 
- Fixed an issue with the Skills tab not showing properly when first creating a character.
- Fixed specialisations not properly being added to dicepool when firing weapons.
- Fixed a regression in the behaviour of shapeshifters in karmagen not automatically selecting 'Human' if the 'None' metavariant is selected.
- Fixed a regression in the behaviour of mastery qualities incorrectly counting towards used spells and karma.
- Fixed issues with copying and pasting cyberware. Note that it's currently not permissible to paste cyberware into other cyberware.
- Fixed extraneous messages about leaving a group when updating character properties if the character is a member of an initiation group.
- Fixed a regression in the behaviour of the spellcategory improvement type that caused all improvements of that type to apply to all spells.
- Fixed an issue with Talent choices not refreshing unless the metavariant index was refreshed.
- Fixed bonuses incorrectly being added twice to cyberlimbs.
- Fixed cyberware improperly being allowed to be flagged as prototype transhuman. Existing cyberware with this flag will be reverted to false.
- Unified behaviour of gear purchasing for vehicles between create and career mode. Ensures that black market pipeline is properly respected and that ammunition objects can be stacked. 
- Added catch behaviour to validate that PDF output can correctly save a file to a given path.